2010-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtiff 3.9.3 released.

	* tools/tiffcp.c (tiffcp): Applied Tom Lane's patch to reject
	YCbCr subsampled data since tiffcp currently doesn't support it.
	http://bugzilla.maptools.org/show_bug.cgi?id=2097

	* Update libtool to version 2.2.10.

2010-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtiff/tiffiop.h (TIFFSafeMultiply): Work properly if
	multiplier is zero.

2010-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtiff/tif_dir.h: Restore ReferenceBlackWhite as a non-custom
	field.  This avoids a multi-thread reentrancy problem as well as
	fixing output of wrong tag value due to redundant definitions for
	the same tag in the tiffFieldInfo[] array.  Resolves
	http://bugzilla.maptools.org/show_bug.cgi?id=2185

	* libtiff/tif_fax3.c (Fax3SetupState): Yesterday's fix for
	CVE-2010-1411 was not complete.

	* libtiff/tiffiop.h (TIFFSafeMultiply): New macro to safely
	multiply two integers.  Returns zero if there is an integer
	overflow.

	* tools/tiffcp.c (main): Fix more TIFF handle leaks.

	* libtiff/tif_read.c (TIFFReadBufferSetup): Skip allocating
	tif_rawdata if tif_rawdatasize becomes zero.

2010-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tools/tiffcrop.c: Removed duplicated macros such as
	TIFFhowmany().

	* Update libtool to version 2.2.8.

	* libtiff/tif_fax3.c (Fax3SetupState): Avoid under-allocation of
	buffer due to integer overflow in TIFFroundup() and several other
	potential overflows.  In conjunction with the fix to TIFFhowmany(),
	fixes CVE-2010-1411.

	* libtiff/tiffiop.h (TIFFhowmany): Return zero if parameters would
	result in an integer overflow. This causes TIFFroundup() to also
	return zero if there would be an integer overflow.

	* libtiff/tif_read.c (TIFFReadBufferSetup): Return an error if
	tif_rawdatasize becomes zero due to an initial raw size of zero or
	an overflow reported by TIFFroundup().
