@@ -262,6 +262,8 @@ option to format an image to fit on a specific paper size.
 .B \-P page
 Format the output images to fit on page size paper. Use
 \-P list to show the supported page sizes and dimensions.
+You can define a custom page size by entering the width and length of the
+page in the current units with the following format #.#x#.#.
 .TP 
 .B \-S cols:rows
 Divide each image into cols across and rows down equal sections.
